   * fixed a crash when a WML event killed a unit while dying in an attack
     which the attack engine didn't expect (bug #8814)
   * new key for [time], sound=, to specify a list of sounds that can play
     when ToD changes
   * more powerful [filter_location], now accepts radius=, [not], and 
     [filter] to match units at the location
 * user interface:
   * new sounds for user interface events
   * added the option to show warnings about deprecated WML usage
   * added the "ignore all" option to continue observing during massive OOS
   * show total amount of visible villages (patch #698)
   * added drag & drop to move units
 * WML tools and scripts:
   * Reorganized: these now live in data/tools/
   * The Perl random map generator (unmaintained since 2003, only
     generated old-style single-letter maps) has been removed.
   * New tool, macroscope, generates cross-reference reports on macro usage.
 * miscellanous changes and bug fixes
   * a friendly healer will now stop poisoned unit to lose HP
   * a unit that dies while attacking will now correctly play its own death
   * turn bell can sound if other soundFX are turned off
   * the first turn starts again with the proper time of day (bug 8637)
   * removes the scaling handling in the halo, removing quite some code
   * fixed various problems found by valgrind, note some invalid access are
     now protected by asserts so there might be more crashes instead of silent
     memory corruptions (bug #8715, bug #8756 and bug #8839)
   * fixed beginning-of-scenario saves containing scenario WML (bug #8698)
   * fixed "End Turn" button clickable after Ctrl-F (bug #6556)
   * fixed autosaves not getting deleted for last campaign scenario and
     multiplayer (bug #8762)
   * Performance : wml compression is done in the helper threads instead of
     the main thread
   * Added some protection against crashing when attacking with units with 