@@ -527,5 +527,26 @@ _s, _s, _s, _s, Aa, Aa, _s, _s, _s, _s
 			[/command]
 		[/set_menu_item]
 	[/event]
+
+	[label]
+	x,y=10,10
+	text="Keep out!!!"
+	[/label]
+
+	[event]
+	name=moveto
+	first_time_only=no
+		[filter]
+			x,y=10, 10
+		[/filter]
+		[deprecated_message]
+			message="Moveing to this location is no longer supported... bye bye"
+		[/deprecated_message]
+		[kill]
+			x,y=10,10
+			animate=yes
+		[/kill]
+	[/event]
+
 [/test]
 
