@@ -1,5 +1,14 @@
 # These are clutter, scheduled to be removed.
 
+# This one it used to tag macros for removal, the number in the name is the
+# release where the message is shown the first time.
+# The removal will be 2 versions later.
+#define DEPRECATE_132 NAME
+	[deprecated_message]
+		message="Macro '" + {NAME} + "' is scheduled for removal in Wesnoth 1.3.4."
+	[/deprecated_message]
+#enddef	
+
 # Allows the player to undo the effects of a moveto event.
 # For example, lets allow undoing reading a note:
 # {ON_TILE 5 7 () (
@@ -12,6 +21,7 @@
 # )}
 
 #define ALLOW_UNDO ACTION
+	{DEPRECATE_132 ALLOW_UNDO_ACTION}
 	[allow_undo]
 		{ACTION}
 	[/allow_undo]
@@ -22,6 +32,7 @@
 # {ADD_GOLD 1 999}
 
 #define ADD_GOLD SIDE AMOUNT
+	{DEPRECATE_132 ADD_GOLD}
 	[gold]
 		side={SIDE}
 		amount={AMOUNT}
